--- a/model.ipynb
+++ b/model.ipynb
@@ -33,10 +33,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 270
         },
         "id": "JvSRYc99Td1V",
-        "outputId": "283fcca1-dd78-451c-b9bf-22bb93de75aa"
+        "outputId": "bbce412b-d702-463a-b011-3c4f6f4b7bf6"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5d68f404-3569-42c1-ad6b-79d6a864d9ac\">\n",
+              "  <div id=\"df-0d0c84c1-b949-4c63-b648-3632756ac2e8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -184,7 +184,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5d68f404-3569-42c1-ad6b-79d6a864d9ac')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0d0c84c1-b949-4c63-b648-3632756ac2e8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -235,12 +235,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5d68f404-3569-42c1-ad6b-79d6a864d9ac button.colab-df-convert');\n",
+              "          document.querySelector('#df-0d0c84c1-b949-4c63-b648-3632756ac2e8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5d68f404-3569-42c1-ad6b-79d6a864d9ac');\n",
+              "          const element = document.querySelector('#df-0d0c84c1-b949-4c63-b648-3632756ac2e8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -307,7 +307,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-zgBn0VfTd1X",
-        "outputId": "ddcd4e47-f147-4457-f677-69c4f0e1a0d7"
+        "outputId": "35e62721-4c4a-4be7-b9bb-2d8ac4427258"
       },
       "outputs": [
         {
@@ -333,7 +333,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KU2phDV1Td1Y",
-        "outputId": "0f5141ec-e374-4b50-c31b-eb8a1d8e3e44"
+        "outputId": "9e65077e-8d3c-4be2-f26f-b237f8b4068e"
       },
       "outputs": [
         {
@@ -374,7 +374,7 @@
           "height": 364
         },
         "id": "E8BK7FbXTd1Y",
-        "outputId": "881b4fe8-cd2b-4967-c835-b2956533e4d9"
+        "outputId": "743b1824-b9db-4f3f-84e5-2ea9f51f4cae"
       },
       "outputs": [
         {
@@ -413,7 +413,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-58e5275c-6231-4677-beac-ac8af2e7697f\">\n",
+              "  <div id=\"df-1cc6ac19-608e-4fb6-a170-a0a14d1a82be\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -589,7 +589,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-58e5275c-6231-4677-beac-ac8af2e7697f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1cc6ac19-608e-4fb6-a170-a0a14d1a82be')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -640,12 +640,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-58e5275c-6231-4677-beac-ac8af2e7697f button.colab-df-convert');\n",
+              "          document.querySelector('#df-1cc6ac19-608e-4fb6-a170-a0a14d1a82be button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-58e5275c-6231-4677-beac-ac8af2e7697f');\n",
+              "          const element = document.querySelector('#df-1cc6ac19-608e-4fb6-a170-a0a14d1a82be');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -684,7 +684,7 @@
           "height": 607
         },
         "id": "dT1aLVdyTd1Z",
-        "outputId": "d61c2ffd-fe2b-4d82-80f0-eb10856f5024"
+        "outputId": "28df75ad-592b-430f-f67a-291ad76d6f62"
       },
       "outputs": [
         {
@@ -712,10 +712,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 883
+          "height": 660
         },
         "id": "clRNUUwMTd1Z",
-        "outputId": "78a13722-ff92-4fa9-a1b4-eb078edefc6a"
+        "outputId": "8c73cf5c-4f5f-4697-bc1c-cec6af8464b9"
       },
       "outputs": [
         {
@@ -746,14 +746,14 @@
           "height": 371
         },
         "id": "tpd0SC7bTd1Z",
-        "outputId": "3899225a-55f9-42c5-9e3c-b997073110dd"
+        "outputId": "2c397e86-ffc0-49a6-c5c2-10c3a115bda3"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f64745caa90>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fc9d1176d10>"
             ]
           },
           "metadata": {},
@@ -790,14 +790,14 @@
           "height": 500
         },
         "id": "9SZK66MfTd1b",
-        "outputId": "372b3c89-89d9-490c-d76f-f142f5901888"
+        "outputId": "c78aa414-3764-4494-8897-8ec638d855e9"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f646f687b90>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fc9d0fb5750>"
             ]
           },
           "metadata": {},
@@ -832,7 +832,7 @@
           "height": 279
         },
         "id": "HGuXeeiZTd1c",
-        "outputId": "2dac8f9d-2b06-4897-cae0-460ad3b99fb2"
+        "outputId": "6beecfee-dbf8-445a-b923-0e060329f57d"
       },
       "outputs": [
         {
@@ -874,7 +874,7 @@
           "height": 279
         },
         "id": "HPya_a5hTd1e",
-        "outputId": "f2fb4c96-0277-4812-fd3e-1f80c291e0d3"
+        "outputId": "106ce281-d888-4ccc-8119-34275005b495"
       },
       "outputs": [
         {
@@ -921,7 +921,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jl5FzpmbTd1f",
-        "outputId": "4596c821-a5df-4d86-db34-a57a28d6d17b"
+        "outputId": "a058105c-7535-43ac-ab82-3c138acdc785"
       },
       "outputs": [
         {
@@ -987,13 +987,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hymszq9NTd1f",
-        "outputId": "f5e121da-8853-429f-ed62-420209012adc"
+        "outputId": "55eb5610-69f8-431c-8ae1-f43728659136"
       },
       "outputs": [
         {
@@ -1004,7 +1004,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ],
       "source": [
@@ -1016,7 +1016,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "id": "xglBPFyVTd1g"
       },
@@ -1029,13 +1029,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_sfEnCAnTd1g",
-        "outputId": "62f1dba1-a81b-48aa-baba-42dff7c05c5f"
+        "outputId": "4cf0cd8d-8c63-42cc-a28b-4a4bede7e061"
       },
       "outputs": [
         {
@@ -1046,7 +1046,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ],
       "source": [
@@ -1059,13 +1059,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BU4OXOA3Td1h",
-        "outputId": "229326e3-6f3c-4958-a8d8-c5908ccaad53"
+        "outputId": "31500dd7-4d7e-45e1-de94-14e6a6fc0375"
       },
       "outputs": [
         {
@@ -1080,6 +1080,8 @@
       "source": [
         "#Support Vector Machine Classifier\n",
         "from sklearn.svm import SVC\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score,roc_auc_score\n",
         "\n",
         "clf=SVC(kernel='linear',gamma='scale')\n",
         "clf.fit(X_train,y_train)\n",
@@ -1091,21 +1093,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kt9sbOCxTd1h",
-        "outputId": "7d8c4339-d8a5-49eb-9f20-f5e70d4ad1c2"
+        "outputId": "84d3f9d2-9191-4d06-87e2-4a052a6d863d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy score 0.8857142857142857\n",
-            "ROC AUC score 0.8920454545454546\n"
+            "Accuracy score 0.9142857142857143\n",
+            "ROC AUC score 0.9128787878787877\n"
           ]
         }
       ],
@@ -1125,18 +1127,22 @@
       "execution_count": 20,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 237
         },
         "id": "BN2f5un3Td1h",
-        "outputId": "bf92e2ee-956d-4b7c-e932-f7643a2e7a70"
+        "outputId": "8082754b-8493-4742-e8bf-d909faa4a9ff"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy score 0.7142857142857143\n",
-            "ROC AUC score 0.643939393939394\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-20-bb1e000a7152>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Accuracy score {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ROC AUC score {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#pd.DataFrame(data={\"Y_Actual\":y_test,\"Y_Predict\":y_pred})\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'accuracy_score' is not defined"
           ]
         }
       ],
@@ -1157,18 +1163,22 @@
       "execution_count": 21,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 237
         },
         "id": "WealKkihTd1h",
-        "outputId": "38b22caa-e747-4642-db5a-4fd02c5f6b2c"
+        "outputId": "0c435852-075e-4eb5-ad61-953f9e3fd945"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy score 0.8857142857142857\n",
-            "ROC AUC score 0.8920454545454546\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-ce843c618dff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Accuracy score {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ROC AUC score {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroc_auc_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#pd.DataFrame(data={\"Y_Actual\":y_test,\"Y_Predict\":y_pred})\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'accuracy_score' is not defined"
           ]
         }
       ],
@@ -1185,7 +1195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
